<resources>
    <string name="app_name">application</string>
    <string name="unfilled">unfilled</string>
    <string name="birth_unfilled">\tunfilled</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Verify">Verify</string>
    <string name="calories">Calories</string>
    <string name="continue_word">Continue</string>
    <string name="search_word">Search</string>
    <string name="quantity">Quantity</string>
    <string name="zero">0</string>
    <string name="email">Email address</string>
    <string name="Register_vertical">R\ne\ng\ni\ns\nt\ne\nr</string>
    <string name="KG">KG</string>
    <string name="cm">\t\tcm</string>
    <string name="OK">OK</string>
    <string name="addFood">Add Food</string>
    <string name="foodName">Food Name</string>
    <string name="foodName_hint">Please enter food name:</string>
    <string name="register_hint">hint:  input the username</string>
    <string name="usernameExist">Username has existed!</string>
    <string name="usernameAvailable">Username available!</string>
    <string name="login_title">NutriPal</string>
    <string name="login_username">User name</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_confirm">Confirm password</string>
    <string name="login_register">Register</string>
    <string name="login_rememberPW">Remember Password</string>
    <string name="login_forgetPW"><u>Forget password?</u></string>
    <string name="register_EnterInfo">Enter your personal information</string>
    <string name="verify_title">Verify your email</string>
    <string name="verify_hint">Input your email address</string>
    <string name="verify_code">Verify code</string>
    <string name="verify_send">Send</string>
    <string name="home_line">Line</string>
    <string name="home_nutripal">NutriPal</string>
    <string name="home_today">\t\tToday</string>
    <string name="home_calorie">Calorie</string>
    <string name="home_formula">surplus = target - food - exercise</string>
    <string name="home_target">\tTarget\t\t\t%s%s%s</string>
    <string name="home_food">\tFood\t\t\t\t%s%s%s</string>
    <string name="home_exercise">\tExercise\t\t%s%s%s</string>
    <string name="home_exercise_word">exercise</string>
    <string name="home_exercise_calorie">\t374\t\tcalorie</string>
    <string name="home_exercise_hour">\t1.5\t\thour</string>
    <string name="home_steps_word">steps</string>
    <string name="home_steps_steps">\t4647\t\tsteps</string>
    <string name="home_steps_target">\t\t\t\t\ttarget:10000\t</string>
    <string name="home_weight_word">weight</string>
    <string name="home_weight_inpast">in\tpast\t5\tdays</string>
    <string name="meals_remaining">REMAINING CALORIES</string>
    <string name="meals_minus">-</string>
    <string name="meals_plus">+</string>
    <string name="meals_equal">=</string>
    <string name="meals_target">target</string>
    <string name="meals_food">food</string>
    <string name="meals_exercise">exercise</string>
    <string name="meals_breakfast_word">Breakfast</string>
    <string name="carbs_word">carbs</string>
    <string name="fat_word">fat</string>
    <string name="protein_word">protein</string>
    <string name="placeholder">\t</string>
    <string name="meals_lunch_word">Lunch</string>
    <string name="meals_dinner_word">Dinner</string>
    <string name="guide_home">Home</string>
    <string name="guide_diary">Diary</string>
    <string name="guide_profile">Profile</string>
    <string name="home_macronutrients_word">Macronutrients</string>
    <string name="profile_personal_info">Personal Information</string>
    <string name="profile_username">Username</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_birth">Birth</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_age">Age</string>
    <string name="profile_target">Target Weight</string>
    <string name="profile_enterHeight">Enter your height:</string>
    <string name="profile_enterWeight">Enter your weight:</string>
    <string name="profile_enterTarget">Enter your target weight:</string>
    <string name="forget_hint">Input your username</string>
    <string name="setPW_title">Set your new password</string>
    <string name="setPW_newPW">new password</string>
    <string name="example_exercise_calories">\tExercise\t\t374</string>
    <string name="home_addWeight">Add Weight</string>
    <string name="home_inputWeight">Input Weight</string>



</resources>