<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/verify_title"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/forget_username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username" />

    <TextView
        android:id="@+id/forget_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/cyan_blue"
        android:text="@string/forget_hint"
        android:layout_marginStart="10dp"
        android:textSize="15sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 输入密码的 EditText -->
        <EditText

            android:id="@+id/forget_code_et"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/verify_code"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/forget_send_btn"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/verify_send"
            android:layout_gravity="bottom"/>
    </LinearLayout>

    <!-- 注册和取消按钮 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/forget_verify_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Verify" />

        <Button
            android:id="@+id/forget_Cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cancel" />

    </LinearLayout>
</LinearLayout>