<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/addFood"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:text="@string/foodName_hint"
        android:textSize="18sp" />

    <!-- 输入用户名的 EditText -->
    <EditText
        android:id="@+id/addFood_foodName_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/foodName" />


    <!-- 注册和取消按钮 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addFood_search_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_word"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>
</LinearLayout>