<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="400dp"
    android:layout_height="600dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="40dp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_EnterInfo"
        android:fontFamily="@font/home_child_font"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/info_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    style="@style/ProfileTextViewStyle"
                    android:text="@string/profile_username"
                    />

                <EditText
                    android:id="@+id/info_username_et"
                    android:inputType="text"
                    style="@style/ProfileEditTextStyle"
                    android:maxLength="20"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    style="@style/ProfileTextViewStyle"
                    android:text="@string/profile_photo"
                    />

                <ImageView
                    android:id="@+id/info_photo_iv"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="40dp"
                    android:padding="2dp"
                    android:src="@drawable/default_photo"
                    android:clickable="true"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    style="@style/ProfileTextViewStyle"
                    android:text="@string/profile_birth"
                    />

                <TextView
                    android:id="@+id/info_birth_tv"
                    android:layout_width="70dp"
                    style="@style/ProfileEditTextStyle"
                    android:maxLength="25"
                    android:layout_marginEnd="20dp"
                    android:maxLines="1"
                    android:text="@string/unfilled"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    style="@style/ProfileTextViewStyle"
                    android:text="@string/profile_height"
                    />

                <TextView
                    android:id="@+id/info_height_tv"
                    style="@style/ProfileEditTextStyle"
                    android:layout_width="70dp"
                    android:layout_marginEnd="20dp"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:text="@string/unfilled" />

                <TextView
                    android:id="@+id/info_height_unit_tv"
                    android:layout_width="wrap_content"
                    style="@style/ProfileEditTextStyle"
                    android:maxLength="25"
                    android:gravity="end"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:text="@string/cm"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    style="@style/ProfileTextViewStyle"
                    android:text="@string/profile_weight"
                    />

                <TextView
                    android:id="@+id/info_weight_tv"
                    android:layout_width="70dp"
                    style="@style/ProfileEditTextStyle"
                    android:layout_alignParentStart="false"
                    android:maxLength="20"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/cyan_blue"
                    android:layout_alignParentEnd="true"
                    android:text="@string/unfilled"/>

                <TextView
                    android:id="@+id/info_weight_unit_tv"
                    android:layout_width="wrap_content"
                    style="@style/ProfileEditTextStyle"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:text="@string/KG"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    style="@style/ProfileTextViewStyle"
                    android:text="@string/profile_age"
                    />

                <EditText
                    android:id="@+id/info_age_tv"
                    android:inputType="text"
                    android:layout_width="70dp"
                    style="@style/ProfileEditTextStyle"
                    android:text="@string/unfilled"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:maxLength="20"/>



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    style="@style/ProfileTextViewStyle"
                    android:text="@string/profile_target"
                    />

                <TextView
                    android:id="@+id/info_target_tv"
                    android:layout_width="70dp"
                    style="@style/ProfileEditTextStyle"
                    android:text="@string/unfilled"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:maxLength="20"/>

                <TextView
                    android:id="@+id/profile_weight_unit2_tv"
                    android:layout_width="wrap_content"
                    style="@style/ProfileEditTextStyle"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:text="@string/KG"/>

            </RelativeLayout>

        </LinearLayout>




    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/register_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/continue_word"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="60dp"
        style="@style/ButtonStyle_meals"/>

    <Button
        android:id="@+id/register_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/Cancel"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:layout_marginStart="60dp"
        style="@style/ButtonStyle_meals"/>



</FrameLayout>